# qrme

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  desktop-release.yml  e2e.yml
app/: README.md  package-lock.json  package.json
app/electron/: preload.cjs
app/src/: App.tsx  api.ts  store.tsx  styles.css
assets/design/: README.md  gallery.html
docker/: README.md  bootstrap.py  docker-compose.yml  e2e.py
docs/: PRD.md  cloud-model.md  governance-objections.md  guardian.md  media-provenance.md  releasing.md  tandem.md  terms.md
docs/design/: image-prompts.md  lifecycle-and-consent.md
docs/desktop/: build.py
docs/screens/: build.py
jim/: README.md  __init__.py  api.py  conditions.py  db.py  guardian.py  guidance.py  llm.py  models.py  qrme_client.py
jim/tests/: conftest.py  test_standalone.py  test_tandem.py
launcher/: README.md  index.html  package-lock.json  package.json  vite.config.ts
launcher/electron/: main.cjs
launcher/src/: App.tsx  api.ts  main.tsx  store.tsx  styles.css
native/: README.md
native/android/: README.md  build.gradle.kts  settings.gradle.kts
native/ios/: README.md  project.yml
native/windows/: ApiClient.cs  App.xaml  App.xaml.cs  AppState.cs  L10n.cs  MainWindow.xaml  MainWindow.xaml.cs  QrmeStudio.csproj  README.md  app.manifest
pdi/: README.md  __init__.py  api.py  audit.py  client.py  crypto.py  db.py  models.py  vault.py
pdi/tests/: conftest.py  test_pdi.py  test_tandem.py
qrme/: __init__.py  adaptation.py  api.py  auth.py  catalog.py  cloud.py  common.py  companion.py  conditions.py  db.py  dials.py  engagement.py  guardian.py  i18n.py  ledger.py  llm.py  models.py  moderation.py  offline.py  pack_sources.py  packs.py  pdi_client.py  persona.py  pilot.py  rated.py  research.py  robotics.py  seed.py  steering.py  tasks.py  terms.py  watermark.py  workflows.py
suite/: __init__.py  gateway.py  smoke.py
tests/: __init__.py  conftest.py  test_app_connectors.py  test_assistant.py  test_auth.py  test_capabilities.py  test_catalog.py  test_chat_flow.py  test_claims_21_26.py  test_cloud.py  test_community.py  test_companion.py  test_connections.py  test_contribution_flow.py  test_creator_ledger.py  test_dials.py  test_embodiment_consistency.py  test_feedback.py  test_glasses_gaming.py  test_guardian.py  test_handoff.py  test_health.py  test_knowledge_packs.py  test_language_provenance.py  test_licensing.py  test_memorial.py  test_models.py  test_moderation.py  test_objection_revocation.py  test_objections.py  test_offline.py  test_pack_registries.py  test_pilot_controls.py  test_placement_analytics.py  test_placement_earnings_custody.py  test_proactive_limits.py  test_profiles.py  test_rated_commerce.py  test_rated_placement.py  test_research.py  (+13 more)
(+86 files in other folders)
