[project]
name = "qrme"
version = "0.1.0"
description = "QRME — AI Synthetic Profile Platform (v1 backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.117",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qrme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
