[project]
name = "qrme"
version = "0.1.0"
description = "AI synthetic profiles — relationship-aware, remembered, yours"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Bianchi" }]
keywords = ["ai", "synthetic-profiles", "llm", "relationships", "moderation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.117",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.urls]
Repository = "https://github.com/davidsbianchi1984/qrme"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qrme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
